# aws-jwt-verify-rs

./: Cargo.toml
src/: lib.rs
src/cognito/: mod.rs  settings.rs
